# emu8085

./: .gitignore  LICENSE  README.md  main.c  meson.build
binary/: README.md
docs/: README.md  architecture.md  bit_manipulation.md  c_syntax.md  learning_path.md
include/: cpu8085.h  cpu_instructions.h  memory.h
src/: cpu_instructions.c  memory.c  meson.build
